@@ -1,3 +1,8 @@
+Sun Nov 28 01:37:54 2004    <timj@birnet.org>
+
+	* gsignal.c: applied patch by sven@gimp.org (#153727) to reduce
+	signal connection complexity from O(n_handlers) to O(1).
+
 Thu Nov 25 14:09:41 2004  Manish Singh  <yosh@gimp.org>
 
 	* abicheck.sh: filter out G_GNUC stuff when doing the compare.
